--- a/practicas/practica04/ejercicio01/public/index.html
+++ b/practicas/practica04/ejercicio01/public/index.html
@@ -9,5 +9,30 @@
   <body>
     <h1>Hello, Express!</h1>
     <img src="nodejs-logo.png" alt="Node-JS Logo" height="300px" />
+
+    <form action="/login" method="post">
+      <div class="input__group">
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Email"
+          required
+        />
+      </div>
+      <div class="input__group">
+        <label for="pass">Contraseña:</label>
+        <input
+          type="password"
+          name="pass"
+          id="pass"
+          placeholder="Contraseña"
+          required
+        />
+      </div>
+
+      <button type="submit">Ingresar</button>
+    </form>
   </body>
 </html>
