--- a/practicas/practica04/ejercicio01/public/index.html
+++ b/practicas/practica04/ejercicio01/public/index.html
@@ -34,5 +34,12 @@
 
       <button type="submit">Ingresar</button>
     </form>
+
+    <hr />
+
+    <form action="names" method="get">
+      <input type="text" name="username" placeholder="Buscar un nombre de usuario...">
+      <button type="submit">Buscar</button>
+    </form>
   </body>
 </html>
