add frontend for p04.e07

--- a/practicas/practica04/ejercicio07/public/index.html
+++ b/practicas/practica04/ejercicio07/public/index.html
@@ -7,6 +7,16 @@
     <title>p04.ejer07</title>
   </head>
   <body>
-    <h1>p04.ejer07</h1>
+    <section class="buttons-container">
+      <button class="btn" id="overweight">Overweight</button>
+      <button class="btn" id="age">By age</button>
+      <button class="btn" id="imc-over-40">IMC over 40</button>
+      <button class="btn" id="average">Average IMC</button>
+      <button class="btn" id="youngest">youngest</button>
+      <button class="btn" id="height">By height</button>
+    </section>
+    <pre id="result"></pre>
+
+    <script src="app.js"></script>
   </body>
 </html>
