remove unnecessary classes

--- a/practicas/practica04/ejercicio07/public/index.html
+++ b/practicas/practica04/ejercicio07/public/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <section class="buttons-container">
-      <button class="btn" id="overweight">Overweight</button>
-      <button class="btn" id="age">By age</button>
-      <button class="btn" id="imc-over-40">IMC over 40</button>
-      <button class="btn" id="average">Average IMC</button>
-      <button class="btn" id="youngest">youngest</button>
-      <button class="btn" id="height">By height</button>
+      <button id="overweight">Overweight</button>
+      <button id="age">By age</button>
+      <button id="imc-over-40">IMC over 40</button>
+      <button id="average">Average IMC</button>
+      <button id="youngest">youngest</button>
+      <button id="height">By height</button>
     </section>
     <pre id="result"></pre>
 
