--- a/practicas/practica04/ejercicio07/public/index.html
+++ b/practicas/practica04/ejercicio07/public/index.html
@@ -7,13 +7,13 @@
     <title>p04.ejer07</title>
   </head>
   <body>
-    <section class="buttons-container">
-      <button id="overweight">Overweight</button>
-      <button id="age">By age</button>
-      <button id="imc-over-40">IMC over 40</button>
-      <button id="average">Average IMC</button>
-      <button id="youngest">youngest</button>
-      <button id="height">By height</button>
+    <section>
+      <button id="overweight" data-query="overweight_people">Overweight</button>
+      <button id="age" data-query="people_by_age">By age</button>
+      <button id="imc-over-40" data-query="imc_over_40">IMC over 40</button>
+      <button id="average" data-query="average_imc">Average IMC</button>
+      <button id="youngest" data-query="youngest">youngest</button>
+      <button id="height" data-query="people_by_height">By height</button>
     </section>
     <pre id="result"></pre>
 
