remove comments and btns ids on public/

--- a/practicas/practica04/ejercicio07/public/index.html
+++ b/practicas/practica04/ejercicio07/public/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <section>
-      <button id="overweight" data-query="overweight_people">Overweight</button>
-      <button id="age" data-query="people_by_age">By age</button>
-      <button id="imc-over-40" data-query="imc_over_40">IMC over 40</button>
-      <button id="average" data-query="average_imc">Average IMC</button>
-      <button id="youngest" data-query="youngest">youngest</button>
-      <button id="height" data-query="people_by_height">By height</button>
+      <button data-query="overweight_people">Overweight</button>
+      <button data-query="people_by_age">By age</button>
+      <button data-query="imc_over_40">IMC over 40</button>
+      <button data-query="average_imc">Average IMC</button>
+      <button data-query="youngest">youngest</button>
+      <button data-query="people_by_height">By height</button>
     </section>
     <pre id="result"></pre>
 
